r2/r2/public/static/css/reddit.less
/* ... */
.stats td.space {width: 20px}
.stats td.sec { padding-bottom: 7px; font-size : 18px; font-weight: normal }
.stats a {color: #369}
.stats a:hover {text-decoration: underline;}
.stats td.k { color: gray }
.stats th { text-align: left; background-color: whitesmoke; 
            color: #369; font-weight: bold;}
.stats td.ri { padding-left: 20px; text-align: right}


/* Default thumbnails */

.thumbnail {
    float: left; 
    font-size: 0;
    margin-bottom: 2px;
    margin-right: 5px;
    margin-top: 0;
    margin-left: 0;
    overflow: hidden;
    width: 70px; 

    &.nsfw {
        background-image: url(../thumbnail-icon-nsfw.png); /* SPRITE */
        height: 70px;
    }

    &.self {
        background-image: url(../thumbnail-icon-text.png); /* SPRITE */
        height: 70px;
    }

    &.image {
        background-image: url(../thumbnail-icon-image.png); /* SPRITE */
        height: 70px;
    }

    &.default {
        background-image: url(../thumbnail-icon-link.png); /* SPRITE */
        height: 70px;
    }
}


/* CSS customisation page */

.stylesheet-customize-container { }
.stylesheet-customize-container textarea { font-family: "Bitstream Vera Sans Mono", Consolas, monospace; margin: 0; padding: 0px; }
.stylesheet-customize-container h2 { margin-top: 15px; margin-bottom: 10px;  }

.image-upload .new-image { margin-left: 20px }
.image-upload span  { padding-left: 5px; }


ul.image-preview-list {
    margin: 20px 320px 20px 20px;
    font-size:larger;
}
ul.image-preview-list li {
    padding-bottom: 10px; 
    margin-bottom: 20px; 
    vertical-align: top; 
    width: 45%; 
    height: 100px; 
    display: inline-block;
    position: relative;
}

ul.image-preview-list .preview {
    width: 100px;                                     
    float: left;
    display: block;
    text-align: center;
    max-height: 100px;
    overflow: hidden;
}
ul.image-preview-list .preview img {
    max-width: 100px; 
    padding: auto;
}
ul.image-preview-list .description {
    vertical-align: top;
    margin-left: 105px; 
}
ul.image-preview-list .description pre {
    display: inline;
    padding: 5px;
    color: #000;
    background-color: transparent;
}


.sheets { margin-right: 315px; }
.sheets .col { width: 100%; }
.sheets .col > div { margin: 0 5px; }
.sheets .col textarea { width: 100% }
.sheets .buttons { margin-left: 5px }
.sheets .btn { margin-left: 0px; margin-right: 5px; }
.sheets .btn.right { float: right; margin-right: 3px;}


#validation-errors {
    margin-left: 40px; 
    margin-top: 10px; 
    list-style-type: disc;
}

#validation-errors a,
#validation-errors li,
.errors h2 { color: red }

#validation-errors a:hover { text-decoration: underline; }
#validation-errors pre { padding: 10px; color: black; }

#preview-table {
    padding-right: 15px;  
}
#preview-table > table {  
    border-width: .2em;
    border-style: dashed;
    border-color: lightgray;
    padding: 5px; 
    margin: 5px; 
    width: 900px;
}

#preview-table > table > tbody > tr { padding-bottom: 10px;  }
#preview-table > table > tbody > tr > td { padding: 5px; padding-right: 15px;}
#preview-table > table > tbody > tr > th {
    padding: 5px; padding-right: 15px;
    font-weight: bold; 
    vertical-align: top;
    font-size: larger;
    text-align: right;
}

#img-preview-container {
    border-width: .2em;
    border-style: dashed;
    border-color: lightgray;
    padding: 5px; 
    margin: 5px; 
    float: left;
}

#image-upload #img-preview-container img {
  max-width: 160px;
}
#icon-upload #img-preview-container img {
  width: 64px;
  height: 64px;
  margin: 0;
}
#banner-upload #img-preview-container img {
  width: 160px;
  height: 48px;
  margin: 0;
}

.linefield.mobile {
  width: 512px;
  background-color: #EFF7FF;
  border: 1px solid #CEE3F8;
}

.private-feeds.instructions .prefright { 
    line-height: 2em;
}

.private-feeds.instructions .feedlink {
    padding: 2px 5px;
    font-weight: bold;
    margin-right: 5px; 
    border: 1px solid #0000FF;
    color: white; 
    padding-left: 22px; 
    background: #336699 none no-repeat scroll top left;
}

.private-feeds.instructions .feedlink.rss-link {
    background-image: url(../rss.png);
}

.private-feeds.instructions .feedlink.json-link {
    background-color: #DDDDDD;
    background-image: url(../json.png);
    color: black; 
}

#sr-header-area {
    background-color: #f0f0f0;
    white-space: nowrap;
    text-transform: uppercase;
    border-bottom: 1px solid gray;
    font-size: 90%;
    height: 18px;
    line-height: 18px;
 }

#sr-header-area .width-clip {
    position: absolute;
    left: 0;
    right: 0;
}

#sr-header-area .selected a {
    color: orangered;
}

#sr-header-area .sr-list {
    overflow: hidden;
}

#sr-header-area .dropdown.srdrop {
    float: left;
    padding-left: 5px;
}

#sr-header-area .drop-choices.srdrop {
    margin-top: 0;
    margin-left: 5px;
}

.dropdown.srdrop .selected {
    background: none no-repeat scroll center right;
    background-image: url(../droparrowgray.gif); 
    display: inline-block;
    vertical-align: bottom;
    padding-right: 21px;
    padding-left: 5px; /* have to use padding instead of margin cause of ie */
    color: black;
    font-weight: normal;
    margin-left: -5px; /* There's 5px margin intended for the SR list... */
    margin-right: 10px;/* ...so we move it to the right side plus 5 more */
    cursor: pointer;
 }

.srdrop .choice {padding-top: 3px;}

.srdrop .choice.top-option {
    font-style: italic;
    border-bottom: 1px dotted #369;
}



.srdrop .choice.bottom-option {
    font-style: italic;
    border-top: 1px dotted #369;
}

.sr-bar .separator {color: gray; }
.sr-bar a {color: black;} 
.sr-bar a.gold { color: #9a7d2e; font-weight: bold; }

#sr-more-link {
    color: black;
    background-color: #f0f0f0;
    position: absolute;
    right: 0;
    top: 0;
    padding: 0 5px 0 15px;
    font-weight: bold;
    margin: 0;
}

#sr-more-link:hover {text-decoration: underline;}
/* ... */

